Update SwissMap.java